--- a/src/pages/hikvision.astro
+++ b/src/pages/hikvision.astro
@@ -60,6 +60,28 @@ const structuredData = {
       inLanguage: "en",
     },
     {
+      "@type": "BreadcrumbList",
+      "@id": "https://lovosis.com/#breadcrumb",
+      itemListElement: [
+        {
+          "@type": "ListItem",
+          position: 1,
+          item: {
+            "@id": "https://lovosis.com",
+            name: "Home",
+          },
+        },
+        {
+          "@type": "ListItem",
+          position: 2,
+          item: {
+            "@id": "https://lovosis.com/hikvision",
+            name: "Hikvision",
+          },
+        },
+      ],
+    },
+    {
       "@type": "WebPage",
       "@id": "https://lovosis.com/#webpage",
       url: "https://lovosis.com/hikvision",
