--- a/src/pages/unvdisplay.astro
+++ b/src/pages/unvdisplay.astro
@@ -45,6 +45,28 @@ const structuredData = {
       url: "https://lovosis.com/unvdisplay",
       description: description,
     },
+    {
+      "@type": "BreadcrumbList",
+      "@id": "https://lovosis.com/#breadcrumb",
+      itemListElement: [
+        {
+          "@type": "ListItem",
+          position: 1,
+          item: {
+            "@id": "https://lovosis.com",
+            name: "Home",
+          },
+        },
+        {
+          "@type": "ListItem",
+          position: 2,
+          item: {
+            "@id": "https://lovosis.com/unvdisplay",
+            name: "Unv Display",
+          },
+        },
+      ],
+    },
     unvdisplaydata.map((p) => {
       return {
         "@type": "ImageObject",
