--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -2,10 +2,13 @@
 import MainLayout from "@/layouts/MainLayout.astro";
 import { SITE } from "@data/constants";
 import lovosis from "../../assets/img/lovosis.jpg";
+import { Image } from "astro:assets";
 
-const pageTitle: string = `About | ${SITE.Title + " - " + ", United Arab Emirates"}`;
-const NAME = "Lovosis Technology L.L.C U.A.E";
-const IMAGE = lovosis;
+const pageTitle: string =
+  "About Lovosis Technology – Leading Security System Supplier in the Middle East,U.A.E";
+const description: string =
+  "Lovosis Technology is a highly experienced security system supplier and exporter, providing top-tier UNV, Hikvision, and Dahua solutions across the Middle East. Trusted for quality and reliability, we deliver advanced security systems tailored to your needs";
+const NAME = "Lovosis Technology";
 
 const {
   title = ["Why Choose Lovosis?"],
@@ -49,23 +52,29 @@ const structuredData = {
     {
       "@type": "Organization",
       "@id": "https://lovosis.com/#organization",
-      name: NAME,
-      url: SITE.baseURL,
+      name: "Lovosis Technology",
+      url: "https://lovosis.com/",
+      logo: "https://lovosis.com/pictures/lovosis.jpg",
+      sameAs: [
+        "https://www.facebook.com/lovosis",
+        "https://www.linkedin.com/company/lovosis",
+        "https://twitter.com/lovosis",
+      ],
     },
     {
       "@type": "WebSite",
       "@id": "https://lovosis.com/#website",
-      url: SITE.baseURL,
-      name: NAME,
+      url: "https://lovosis.com/",
+      name: "Lovosis Technology",
       publisher: { "@id": "https://lovosis.com/#organization" },
       inLanguage: "en-US",
     },
     {
       "@type": "ImageObject",
-      "@id": IMAGE,
-      url: IMAGE,
-      width: "200",
-      height: "200",
+      "@id": "https://lovosis.com/pictures/lovosis.jpg",
+      url: "https://lovosis.com/pictures/lovosis.jpg",
+      width: 200,
+      height: 200,
       inLanguage: "en-US",
     },
     {
@@ -76,7 +85,7 @@ const structuredData = {
           "@type": "ListItem",
           position: 1,
           item: {
-            "@id": "https://lovosis.com",
+            "@id": "https://lovosis.com/",
             name: "Home",
           },
         },
@@ -85,53 +94,61 @@ const structuredData = {
           position: 2,
           item: {
             "@id": "https://lovosis.com/about",
-            name: "About-Us",
+            name: "About Us",
           },
         },
       ],
     },
     {
       "@type": "WebPage",
-      "@id": "https://lovosis.com/#webpage",
-      url: URL,
-      name: NAME,
+      "@id": "https://lovosis.com/about/#webpage",
+      url: "https://lovosis.com/about",
+      name: "About Lovosis Technology",
       datePublished: "2025-02-05T11:26:39+00:00",
       dateModified: "2025-12-12T19:17:19+00:00",
       about: { "@id": "https://lovosis.com/#organization" },
       isPartOf: { "@id": "https://lovosis.com/#website" },
-      primaryImageOfPage: { "@id": IMAGE },
+      primaryImageOfPage: { "@id": "https://lovosis.com/pictures/lovosis.jpg" },
       inLanguage: "en-US",
     },
     {
       "@type": "Person",
-      "@id": URL,
-      name: "Lovosis",
-      url: URL,
+      "@id": "https://lovosis.com/about/#person",
+      name: "Gafoor T.C",
+      url: "https://lovosis.com/about",
       image: {
         "@type": "ImageObject",
-        "@id": URL,
-        url: URL,
-        caption: NAME,
+        "@id": "https://lovosis.com/pictures/team/profile%20Gafoor.jpg",
+        url: "https://lovosis.com/pictures/team/profile%20Gafoor.jpg",
+        caption: "Gafoor TC",
         inLanguage: "en-US",
       },
-      sameAs: [URL],
+      sameAs: [
+        "https://www.linkedin.com/in/gafoor",
+        "https://twitter.com/gafoor",
+      ],
       worksFor: { "@id": "https://lovosis.com/#organization" },
     },
     {
       "@type": "Article",
-      headline: title,
-      keywords: "",
+      headline: "About Lovosis Technology - Leading Security System Supplier",
+      keywords:
+        "security systems, UNV, Hikvision, Dahua, Dubai, UAE, Middle East",
       datePublished: "2024-02-05T11:26:39+00:00",
       dateModified: "2025-12-12T19:17:19+00:00",
-      author: { "@id": URL, name: "Johns Abraham" },
+      author: {
+        "@id": "https://lovosis.com/about/#person",
+        name: "Johns Abraham",
+      },
       publisher: { "@id": "https://lovosis.com/#organization" },
-      description: "",
-      name: NAME,
-      "@id": "https://totaleng.in/#richSnippet",
-      isPartOf: { "@id": "https://lovosis.com/#webpage" },
-      image: { "@id": IMAGE },
+      description:
+        "Lovosis Technology is a trusted supplier and exporter of UNV, Hikvision, and Dahua security systems across the Middle East. Learn more about our expertise and solutions.",
+      name: "About Lovosis Technology",
+      "@id": "https://lovosis.com/about/#richSnippet",
+      isPartOf: { "@id": "https://lovosis.com/about/#webpage" },
+      image: { "@id": "https://lovosis.com/pictures/lovosis.jpg" },
       inLanguage: "en-US",
-      mainEntityOfPage: { "@id": "https://lovosis.com=/#webpage" },
+      mainEntityOfPage: { "@id": "https://lovosis.com/about/#webpage" },
     },
   ],
 };
@@ -184,7 +201,7 @@ const structuredData = {
   }
 </style>
 
-<MainLayout title={pageTitle} sd={structuredData}>
+<MainLayout title={pageTitle} sd={structuredData} description={description}>
   <section
     class="mx-auto max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 2xl:max-w-full"
   >
