--- a/src/pages/imou.astro
+++ b/src/pages/imou.astro
@@ -16,22 +16,22 @@ const description: string ="Looking for affordable and high-quality Imou cameras
 const cards = [
   {
     title: "NVR",
-    link: "https://imou-dubai.com/product-category/imou-nvr/",
+    link: "/public/pictures/nvr-imou.webp",
     bgImage: "url('pictures/nvr-imou.webp')", 
   },
   {
     title: "Home Security",
-    link: "https://imou-dubai.com/product-category/imou-home-security/",
+    link: "/public/pictures/home-imou.webp",
     bgImage: "url('pictures/home-imou.webp')",
   },
   {
     title: "Cameras",
-    link: "https://imou-dubai.com/product-category/imou-cameras/",
+    link: "/public/pictures/ip-imou.webp",
     bgImage: "url('pictures/ip-imou.webp')", 
   },
   {
     title: "Accessories",
-    link: "https://imou-dubai.com/product-category/imou-accessories/",
+    link: "/public/pictures/acc-imou.webp",
     bgImage: "url('pictures/acc-imou.webp')", 
   },
 ];
